# zeonos

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  build.sh  cross-compiler-build-on-ubuntu.txt  debug-qemu.sh  debug.sh  hosted-cross-compiler-build-ubuntu.txt  qemu.sh
.github/workflows/: cmake.yml
arch/arm/: CMakeLists.txt  linker.ld
arch/arm/boot/: arch_asm_routine.S  boot.S  kvirt_mem.c  uart_lower.c
docs/: README.MD
drivers/: CMakeLists.txt  uart0.c  uart_lower.c
include/: string.h
include/zeonos/drivers/: uart0.h  uart_lower.h
include/zeonos/kernel/: hello.hpp
kernel/: CMakeLists.txt  before_kernel.c  boot.S  hello.cpp  hello.hpp  kernel.c  linker.ld  stack_smash.c
libc/: CMakeLists.txt  foo.c  local.h  memmove.c
